--- a/pastpapers.html
+++ b/pastpapers.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>
-        DTBASE | Design and Technology Revision - Tutoring Service. 
+        DTBASE | Design and Technology Revision - Coursework. 
     </title>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="We offer the highest quality 1-to-1 tutoring services at DTBase. 
-    Boost your grades and reach your academic goals with our personalized tutoring services.">
+    <meta name="description" content="Real, high graded coursework examples completely free with DTBase!
+    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
+    solutions, coursework examples and much more!">
 
-    <link rel="shortcut icon" type="image/x-icon" href="Favicon.png">
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="../Favicon.png">
+    <link rel="stylesheet" href="../styles.css"/>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZG2YDGNFN"></script>
@@ -28,13 +29,14 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5114036939976193"
         crossorigin="anonymous">
     </script>
-
 </head>
 
-    <body> <! All content on the website is written within body>
+
+<body>
+    <div class="containter">  
         <header>
             <div class="Logo">
-                <img class="logo" src="images/Logo.png" alt="DesignandTechBase Logo">
+                <img class="logo" src="../images/Logo.png" alt="DesignandTechBase Logo">
             </div>
             <div class="toggle"></div>
             <div class="navigation">
@@ -46,35 +48,112 @@
                 </a>
 
                 <div class="nav-link-wrapper">
-                    <a href="index.html">Home</a>
+                    <a href="../index.html">Home</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="tutoring.html">Tutoring</a>
+                    <a href="../tutoring.html">Tutoring</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="notes/notes.html">Notes</a>
+                    <a href="../notes/notes.html">Notes</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="exercises/exercises.html">Questions</a>
-                </div>
-
-                div class="nav-link-wrapper">
-                    <a href="coursework/coursework.html">Coursework</a>
+                    <a href="../exercises/exercises.html">Questions</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="coursework/coursework.html">Coursework</a>
+                    <a href="../pastpapers/pastpapers.html">Past papers</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="contact.html">Contact</a>
+                    <a href="coursework.html">Coursework</a>
+                </div>
+
+                <div class="nav-link-wrapper">
+                    <a href="../contact.html">Contact</a>
                 </div>
             </div>
-        </header>
-        
-    </body>
-    <script src="script.js"></script>
+        </header>  
+
+
+        <div class="coursework_dropdown">
+            <div class="coursework-example-container">
+                <div class="coursework-quote">
+                    <h2>Edexcel A-Level past papers</h2>
+                </div>
+
+                <a href="#" class="drop_down">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+            </div>
+
+            <div class="content-wrapper">
+                <div class="portfolio-items-wrapper-notes_single">
+
+                    <div class="portfolio-item-wrapper-notes-coursework">
+                        <!-- <div class="portfolio-img-background-notes" style="background-image:url(../images/)"></div> -->
+                        <div class="portfolio-img-background-coursework" style="background-color: rgb(185, 22, 22, 0.5);"></div>
+                        <!-- border-top: 2px solid rgb(185, 22, 22); -->
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_2019Q">June 2019</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-coursework">
+                        <div class="portfolio-img-background-coursework" style="background-color: rgba(22, 125, 185, 0.5);"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 2 Specification.pdf">Part 2: Specification</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-coursework">
+                        <div class="portfolio-img-background-coursework" style="background-color: rgba(55, 148, 48, 0.5);"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 3 Design Ideas.pdf">Part 3: Design Ideas</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-coursework">
+                        <div class="portfolio-img-background-coursework" style="background-color: rgba(155, 108, 213, 0.5);"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 4 Development and Final Idea.pdf">Part 4: Development and Final Design</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-coursework">
+                        <div class="portfolio-img-background-coursework" style="background-color: rgba(54, 178, 206, 0.5);"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 5 Evaluation.pdf">Part 5: Evaluation</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+                <div class="footer">
+                    <div class="footer-content">
+                       <p><strong> Email: designtechbase@gmail.com | DTBase</strong></p>
+                    </div>
+                    <div class="footer-bottom">
+                        &copy; DTBase.com | Designed by Henry Chen and Will Stevens
+                    </div>
+                </div>
+
+    </div>
+</body>
+<script src="../script.js"></script>
 </html>
