--- a/pastpapers/pastpapers.html
+++ b/pastpapers/pastpapers.html
@@ -81,7 +81,7 @@
         <div class="coursework_dropdown">
             <div class="coursework-example-container">
                 <div class="coursework-quote">
-                    <h2>Edexcel A Level - A* Coursework Example 1:</h2>
+                    <h2>Edexcel A-Level past papers</h2>
                 </div>
 
                 <a href="#" class="drop_down">
@@ -95,54 +95,52 @@
 
                     <div class="portfolio-item-wrapper-notes-coursework">
                         <!-- <div class="portfolio-img-background-notes" style="background-image:url(../images/)"></div> -->
-                        <div class="portfolio-img-background-coursework" style="background-color: rgb(185, 22, 22, 0.5);"></div>
+                        <div class="portfolio-img-background-coursework"></div>
                         <!-- border-top: 2px solid rgb(185, 22, 22); -->
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
-                                <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 1 Research.pdf">Part 1: Research</a>
+                                <a href="..\documents\pastpapers\Edexcel_2022Q.pdf">June 2022</a>
                             </div>
                         </div>
                     </div>
 
                     <div class="portfolio-item-wrapper-notes-coursework">
-                        <div class="portfolio-img-background-coursework" style="background-color: rgba(22, 125, 185, 0.5);"></div>
+                        <!-- <div class="portfolio-img-background-notes" style="background-image:url(../images/)"></div> -->
+                        <div class="portfolio-img-background-coursework"></div>
+                        <!-- border-top: 2px solid rgb(185, 22, 22); -->
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
-                                <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 2 Specification.pdf">Part 2: Specification</a>
+                                <a href="..\documents\pastpapers\Edexcel_2021Q.pdf">June 2021</a>
                             </div>
                         </div>
                     </div>
 
                     <div class="portfolio-item-wrapper-notes-coursework">
-                        <div class="portfolio-img-background-coursework" style="background-color: rgba(55, 148, 48, 0.5);"></div>
+                        <!-- <div class="portfolio-img-background-notes" style="background-image:url(../images/)"></div> -->
+                        <div class="portfolio-img-background-coursework"></div>
+                        <!-- border-top: 2px solid rgb(185, 22, 22); -->
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
-                                <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 3 Design Ideas.pdf">Part 3: Design Ideas</a>
+                                <a href="..\documents\pastpapers\Edexcel_2020Q.pdf">June 2020</a>
                             </div>
                         </div>
                     </div>
 
                     <div class="portfolio-item-wrapper-notes-coursework">
-                        <div class="portfolio-img-background-coursework" style="background-color: rgba(155, 108, 213, 0.5);"></div>
+                        <!-- <div class="portfolio-img-background-notes" style="background-image:url(../images/)"></div> -->
+                        <div class="portfolio-img-background-coursework"></div>
+                        <!-- border-top: 2px solid rgb(185, 22, 22); -->
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
-                                <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 4 Development and Final Idea.pdf">Part 4: Development and Final Design</a>
+                                <a href="..\documents\pastpapers\Edexcel_2019Q.pdf">June 2019</a>
                             </div>
                         </div>
                     </div>
-
-                    <div class="portfolio-item-wrapper-notes-coursework">
-                        <div class="portfolio-img-background-coursework" style="background-color: rgba(54, 178, 206, 0.5);"></div>
-                        <div class="img-text-wrapper-notes">
-                            <div class="blurbox">
-                                <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 5 Evaluation.pdf">Part 5: Evaluation</a>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
+
+        
 
                 <div class="footer">
                     <div class="footer-content">
