--- a/tutoring.html
+++ b/tutoring.html
@@ -94,9 +94,8 @@
                         <h3>Our <b>experienced and highly qualified</b> tutors provide <b>personalized 1-to-1 tuition</b> for GCSE and A-Level students. 
                             Our tailored lesson plans and <b>flexible scheduling</b> options make it easy for your child to get the extra help they need, when they need it. 
                             In addition we have a <b>specialist maths tutor</b> to guide your child through the <b>challenges</b> of mathematics within the DT syllabus. </h3>
-                        <h3>With our <b>proven track record of success</b>, your child will be on the fast track to academic achievement. 
-                            Give your child the gift of a brighter future with DTBase's tuition services.</h3>
-                        <h3> Sign up today!</h3>
+                        <h3>With our <b>proven track record of success</b>, your child will be on the fast track to academic achievement.</h3>
+                        <h3>Book your free consultation today!</h3>
                     </div>
                         <div class="contactmebtn">
                             <a href="contact.html">Contact</a>
