--- a/notes/notes_topics/notes_pages/maths_ratios.html
+++ b/notes/notes_topics/notes_pages/maths_ratios.html
@@ -152,7 +152,27 @@
                     <p><b>Step 3) Calculate the volume needed for 100 kayaks:</b></p>
                     <em> Total volume = 15.14 x 100 = 1514 litres</em>
                 </div>
+                <div>
+                    <h3><b>Question 2)</b></h3>
+                    <p>A games console developer has designed a new plastic controller. The controller must have a free space interior volume of 250cm<sup>3</sup> for electrical components.</p>
+                <ul>
+                    <li>The occupied space in the controller is 180cm<sup>3</sup></li>
+                    <li>The ratio of occupied space to free space is 4:5</li>
+                </ul>
+                <p>Is there enough space in the controller for the electronics. Show your working.</p>
+                </div>
+
+                <div class="worked-example">
+                    <p><b>Step 1) Calculate the amount of volume '1 ratio part' is equivalent to:</b></p>
+                    <em>1 ratio part = <sup>180</sup>&frasl;<Sub>4</Sub>= 45</em>
+                    
+                    <p><b>Step 2) Calculate the amount of free space using the ratio:</b></p>
+                    <em>Free space = 45 x 5 (5 ratio parts free space) = 225cm<sup>3</sup></em><br><br/>
+                    <em>225 is smaller than 250, not enough free space</em>
+                </div>
             </div>
+
+
         </div>
 
         <div class="footer">
