fix linking issue

--- a/coursework/coursework.html
+++ b/coursework/coursework.html
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="pastpapers/pastpapers.html">Past Papers</a>
+                    <a href="../pastpapers/pastpapers.html">Past Papers</a>
                 </div>
 
                 <div class="nav-link-wrapper">
