--- a/pastpapers/pastpapers.html
+++ b/pastpapers/pastpapers.html
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="coursework.html">Coursework</a>
+                    <a href="../coursework/coursework.html">Coursework</a>
                 </div>
 
                 <div class="nav-link-wrapper">
