--- a/coursework/coursework.html
+++ b/coursework/coursework.html
@@ -95,7 +95,7 @@
 
                     <div class="portfolio-item-wrapper-notes-coursework">
                         <!-- <div class="portfolio-img-background-notes" style="background-image:url(../images/)"></div> -->
-                        <div class="portfolio-img-background-coursework" style="background-color: rgb(185, 22, 22, 0.5);"></div>
+                        <div class="portfolio-img-background-coursework" style="background-color: rgb(185, 22, 22, 0.5); border-top: 2px solid rgba(185, 22, 22);"></div>
                         <!-- border-top: 2px solid rgb(185, 22, 22); -->
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
