--- a/notes/notes_topics/notes_pages/casting_notes.html
+++ b/notes/notes_topics/notes_pages/casting_notes.html
@@ -136,7 +136,7 @@
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Cold wax mould made of desired shape</li>
-                        <li>Wax mould attached to spure before being dipped into liquid ceramic/stucco</li>
+                        <li>Wax mould attached to sprue before being dipped into liquid ceramic/stucco</li>
                         <li>Then heated to remove wax and set ceramic</li>
                         <li>Molten metal is then poured into the cermaic mould and allowed to set</li>
                         <li>Ceramic shell is then broken off revealing product</li></ol>
