--- a/notes/notes_topics/notes_pages/casting_notes.html
+++ b/notes/notes_topics/notes_pages/casting_notes.html
@@ -133,6 +133,11 @@
 
                 <h3><b><u>Investment casting:</b></u></h3>
                 <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/investmentcasting.png" alt="Diagram of shape dimensions">
+                    </div>
+
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Cold wax mould made of desired shape</li>
