--- a/notes/notes_topics/notes_pages/casting_notes.html
+++ b/notes/notes_topics/notes_pages/casting_notes.html
@@ -175,6 +175,10 @@
 
                 <h3><b><u>Die casting:</b></u></h3>
                 <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/diecasting.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Create and lubricate the mould</li>
