--- a/notes/notes_topics/notes_pages/casting_notes.html
+++ b/notes/notes_topics/notes_pages/casting_notes.html
@@ -214,6 +214,10 @@
 
                 <h3><b><u>Resin casting:</b></u></h3>
                 <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/resincasting.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Mould made of desired shape</li>
