Images to machining

--- a/notes/notes_topics/notes_pages/machining_notes.html
+++ b/notes/notes_topics/notes_pages/machining_notes.html
@@ -260,10 +260,15 @@
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Table legs, table lamp, engine parts, handles<br><br></h3>
+                <h3><b>Uses: </b>Table legs, table lamp, engine parts, handles</h3>
+                <h3><b>Note: </b>Turning machines are different depending on the material being used.<br><br></h3>
 
                 <h3><b><u>Stamping:</b></u></h3>
                 <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/stamping.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Process is usually done via a CNC</li>
@@ -297,6 +302,10 @@
 
                 <h3><b><u>Pressing:</b></u></h3>
                 <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/pressing.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>A sheet metal is clamped over the die and held in the correct position using the back gauge</li>
