More edexcel pastpapers

--- a/pastpapers/pastpapers.html
+++ b/pastpapers/pastpapers.html
@@ -167,6 +167,30 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255); border-bottom: 2px solid rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2019ASQ.pdf">2019 AS Level Question Paper</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2019ASMS.pdf">2019 AS Level Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255); border-bottom: 2px solid rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2018ASQ.pdf">2018 AS Level Question Paper</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2018ASMS.pdf">2018 AS Level Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
