--- a/pastpapers/pastpapers.html
+++ b/pastpapers/pastpapers.html
@@ -191,6 +191,18 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255); border-bottom: 2px solid rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2016P1Q.pdf">2016 Question Paper 1 (Old specification)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2016P1MS.pdf">2016 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
