Edexcel pastpapers done

--- a/pastpapers/pastpapers.html
+++ b/pastpapers/pastpapers.html
@@ -196,10 +196,163 @@
                         <div class="portfolio-img-background-pastpaper"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_SpecPaper.pdf">New Specification Question Paper and Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
                                 <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2016P1Q.pdf">2016 Question Paper 1 (Old specification)</a>
                             </div>
                             <div class="blurbox">
                                 <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2016P1MS.pdf">2016 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255); border-bottom: 2px solid rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2016P2Q.pdf">2016 Question Paper 2 (Old specification)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2016P2MS.pdf">2016 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2015P1Q.pdf">2015 Question Paper 1 (Old specification)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2015P1MS.pdf">2015 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255); border-bottom: 2px solid rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2015P2Q.pdf">2015 Question Paper 2 (Old specification)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2015P2MS.pdf">2015 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255); border-bottom: 2px solid rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2014P1Q.pdf">2014 Question Paper 1 (Old specification)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_20141MS.pdf">2014 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2013P1Q.pdf">2013 Question Paper 1 (Old specification)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2013P1MS.pdf">2013 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255); border-bottom: 2px solid rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2013P2Q.pdf">2013 Question Paper 2 (Old specification)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2013P2MS.pdf">2013 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2012P1Q.pdf">2012 Question Paper 1 (Old specification)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2012P1MS.pdf">2012 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255); border-bottom: 2px solid rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2012P2Q.pdf">2012 Question Paper 2 (Old specification)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2012P2MS.pdf">2012 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2011P1Q.pdf">2011 Question Paper 1 (Old specification)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2011P1MS.pdf">2011 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255); border-bottom: 2px solid rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2011P2Q.pdf">2011 Question Paper 2 (Old specification)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2011P2MS.pdf">2011 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2010P1Q.pdf">2010 Question Paper 1 (Old specification)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2010P1MS.pdf">2010 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255); border-bottom: 2px solid rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2010P2Q.pdf">2010 Question Paper 2 (Old specification)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2010P2MS.pdf">2010 Markscheme</a>
                             </div>
                         </div>
                     </div>
