Fix past papers nav link

--- a/notes/notes_topics/DigitalTechnologies.html
+++ b/notes/notes_topics/DigitalTechnologies.html
@@ -55,11 +55,15 @@
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="../notes.html">Notes</a>
+                    <a href="../../notes.html">Notes</a>
                 </div>
 
                 <div class="nav-link-wrapper">
                     <a href="../../exercises/exercises.html">Questions</a>
+                </div>
+
+                <div class="nav-link-wrapper">
+                    <a href="../../pastpapers/pastpapers.html">Past Papers</a>
                 </div>
 
                 <div class="nav-link-wrapper">
