--- a/notes/notes_topics/notes_pages/maths_statistics.html
+++ b/notes/notes_topics/notes_pages/maths_statistics.html
@@ -64,6 +64,10 @@
                 </div>
 
                 <div class="nav-link-wrapper">
+                    <a href="../../../pastpapers/pastpapers.html">Past papers</a>
+                </div>   
+
+                <div class="nav-link-wrapper">
                     <a href="../../../coursework/coursework.html">Coursework</a>
                 </div>
 
