--- a/pastpapers/pastpapers.html
+++ b/pastpapers/pastpapers.html
@@ -78,7 +78,7 @@
             </div>
         </header>
         <div class="quote">
-            <h2>Free handmade revision notes tailored for GCSE and A Level Design and Technology</h2>
+            <h2>Design and technology past papers for all levels and all exam boards</h2>
         </div>
 
         <!-- <div class="search-container">
@@ -95,11 +95,31 @@
             <div class="portfolio-items-wrapper">
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../images/portfolio1.jpg)" title="A bunch of materials"></div>
+                    <div class="portfolio-img-background" style="background-color: rgb(255, 0, 0, 0.5);"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
                             <a href="papers_level/pastpapers_alevel.html">A Level Past papers</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-color: rgba(157, 0, 255, 0.4);"></div>
+                    <div class="img-text-wrapper">
+                        <div class="blurbox">
+                            <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
+                            <a href="papers_level/pastpapers_gcse.html">GCSE Past papers</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-color: rgba(68, 255, 0, 0.4);"></div>
+                    <div class="img-text-wrapper">
+                        <div class="blurbox">
+                            <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
+                            <a href="papers_level/pastpapers_pregcse.html">Pre-GCSE Past papers (Coming soon)</a>
                         </div>
                     </div>
                 </div>
