--- a/pastpapers/papers_level/pastpapers_gcse.html
+++ b/pastpapers/papers_level/pastpapers_gcse.html
@@ -149,10 +149,10 @@
                         <div class="portfolio-img-background-pastpaper"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
-                                <a href="..\documents\pastpapers\AQA_A_Level\AQA_2022P1Q.pdf">2022 Question Paper 1</a>
+                                <a href="..\..\documents\pastpapers\AQA_GCSE\AQA_2022P1Q.pdf">2022 Question Paper 1</a>
                             </div>
                             <div class="blurbox">
-                                <a href="..\documents\pastpapers\AQA_A_Level\AQA_2022P1MS.pdf">2022 Markscheme</a>
+                                <a href="..\..\documents\pastpapers\AQA_GCSE\AQA_2022P1MS.pdf">2022 Markscheme</a>
                             </div>
                         </div>
                     </div>
@@ -216,21 +216,6 @@
                             </div>
                             <div class="blurbox">
                                 <a href="..\documents\pastpapers\OCR_A_Level\OCR_2022P1Q.pdf">2022 Markscheme</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(153, 0, 255); border-bottom: 2px solid rgba(153, 0, 255);">
-                        <div class="portfolio-img-background-pastpaper"></div>
-                        <div class="img-text-wrapper-notes">
-                            <div class="blurbox">
-                                <a href="..\documents\pastpapers\OCR_A_Level\OCR_2022P2Q.pdf">2022 Question paper (Problem solving in product design)</a>
-                            </div>
-                            <div class="blurbox">
-                                <a href="..\documents\pastpapers\OCR_A_Level\OCR_2022P2RB.pdf">2022 Resource booklet (Problem solving in product design)</a>
-                            </div>
-                            <div class="blurbox">
-                                <a href="..\documents\pastpapers\OCR_A_Level\OCR_2022P2MS.pdf">2022 Markscheme</a>
                             </div>
                         </div>
                     </div>
