--- a/pastpapers/papers_level/pastpapers_gcse.html
+++ b/pastpapers/papers_level/pastpapers_gcse.html
@@ -118,14 +118,74 @@
             <div class="content-wrapper">
                 <div class="portfolio-items-wrapper-notes_single">
 
-                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255); border-bottom: 2px solid rgba(0, 145, 255);">
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
                         <div class="portfolio-img-background-pastpaper"></div>
                         <div class="img-text-wrapper-notes">
                             <div class="blurbox">
-                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2022Q.pdf">2022 Question Paper</a>
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2022P1Q_Metals.pdf">2022 Question Paper (Metals)</a>
                             </div>
                             <div class="blurbox">
-                                <a href="..\documents\pastpapers\Edexcel_A_Level\Edexcel_2022MS.pdf">2022 Markscheme</a>
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2022P1MS_Metals.pdf">2022 Markscheme (Metals)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2022P1Q_Papers.pdf">2022 Question Paper (Papers and Boards)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2022P1MS_Papers.pdf">2022 Markscheme (Papers and Boards)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2022P1Q_Polymers.pdf">2022 Question Paper (Polymers)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2022P1MS_Polymers.pdf">2022 Markscheme (Polymers)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2022P1Q_Systems.pdf">2022 Question Paper (Systems)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2022P1MS_Systems.pdf">2022 Markscheme (Systems)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2022P1Q_Textiles.pdf">2022 Question Paper (Textiles)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2022P1MS_Textiles.pdf">2022 Markscheme (Textiles)</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(0, 145, 255);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2022P1Q_Timbers.pdf">2022 Question Paper (Timbers)</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\Edexcel_GCSE\Edexcel_2022P1MS_Timbers.pdf">2022 Markscheme (Timbers)</a>
                             </div>
                         </div>
                     </div>
