--- a/notes/notes_topics/notes_pages/machining_notes.html
+++ b/notes/notes_topics/notes_pages/machining_notes.html
@@ -234,6 +234,10 @@
 
                 <h3><b><u>Turning:</b></u></h3>
                 <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/turning.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Begin by placing a circular, square or rectangular shaped peice of metal/wood into the lathes drive area</li>
