--- a/pastpapers/pastpapers.html
+++ b/pastpapers/pastpapers.html
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="notes.html">Notes</a>
+                    <a href="../notes/notes.html">Notes</a>
                 </div>
 
                 <div class="nav-link-wrapper">
