--- a/notes/notes_topics/notes_pages/machining_notes.html
+++ b/notes/notes_topics/notes_pages/machining_notes.html
@@ -80,7 +80,7 @@
 
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_casting.jpg)" title="casting background">
-                <h1 style="color:white"><u><b>Casting</b></u></h1>
+                <h1 style="color:white"><u><b>Machining</b></u></h1>
             </div>
 
             <div class="notes-content">
@@ -316,7 +316,9 @@
                     </div>
                     <p><b>How it works:</b></p>
                     <ul>
-                        <ol><li>A sheet metal is clamped over the die and held in the correct position using the back gauge</li>
+                        <ol><li>Metal is rolled out and straightened</li>
+                        <li>Metal is cut to required blank size</li>
+                        <li>The blank metal is clamped over the die and held in the correct position using the back gauge</li>
                         <li>A hydraulically operated punch is then pushed into the sheet metal</li>
                         <li>Once the desired shape is formed the punch is retracted and the sheet component is ejected</li></ol>
                     </ul></h3>
