--- a/pastpapers/papers_level/pastpapers_alevel.html
+++ b/pastpapers/papers_level/pastpapers_alevel.html
@@ -479,6 +479,18 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="portfolio-item-wrapper-notes-pastpaper" style="background-color: rgba(255, 0, 0);">
+                        <div class="portfolio-img-background-pastpaper"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\AQA_A_Level\AQA_2018P1QAS.pdf">2018 Question Paper 2</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="..\..\documents\pastpapers\AQA_A_Level\AQA_2018P1MSAS.pdf">2018 Markscheme</a>
+                            </div>
+                        </div>
+                    </div>
         
         
                 </div>
