--- a/notes/notes_topics/notes_pages/moulding_notes.html
+++ b/notes/notes_topics/notes_pages/moulding_notes.html
@@ -97,6 +97,10 @@
 
                 <h3><b><u>Blow moulding:</b></u></h3>
                 <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/blowmoulding.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Plastic granules fed through hopper</li>
@@ -131,6 +135,10 @@
 
                 <h3><b><u>Injection moulding:</b></u></h3>
                 <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/injectionmoulding.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Plastic granules fed through hopper</li>
@@ -203,6 +211,10 @@
 
                 <h3><b><u>Extrusion:</b></u></h3>
                 <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/extrusion.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Plastic granules fed through hopper</li>
